--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+Project 3 - Customer Segment/.ipynb_checkpoints/*
+
 Project 4 - Smartcab/.ipynb_checkpoints/*
 
 Project 4 - Smartcab/smartcab/environment.pyc
 Project 4 - Smartcab/smartcab/planner.pyc
 Project 4 - Smartcab/smartcab/simulator.pyc
+
+Project 5 - Capstone/.ipynb_checkpoints/*
